.kubernetes/dev/k8s.yaml
#Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cct-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cct-api
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: cct-api
    spec:
      containers:
        - name: cct-api
          image: gcr.io/PROJECT_ID/IMAGE:TAG
          ports:
            - containerPort: 3000
          # resources:
          #   limits:
          #     cpu: 500m
          #     memory: 128Mi
          # env:
          #   - name: NODE_ENV
          #     valueFrom:
          #       secretKeyRef:
          #         name: custom-envs
          #         key: NODE_ENV
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - cct
      tolerations:
        - key: app
          operator: Equal
          value: cct
      restartPolicy: Always
---
#Service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cct-api
  name: cct-api
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: cct-api
---
#Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cct-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-dev"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    # nginx.org/client-max-body-size: "100m"
spec:
  tls:
    - hosts:
        - api.cct.dev.mobilidade.rio
      secretName: cct-api-tls
  rules:
    - host: api.cct.mobilidade.rio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cct-api
                port:
                  number: 80
